welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:5: error: ';' expected but 'return' found.
		} return false;
                  ^inOrder:10: error: ';' expected but 'return' found.
			} return false 
                          ^